[package]
name = "fibridge-rs"
version = "0.1.0"
authors = ["Anders Pitman <tapitman11@gmail.com>"]
edition = "2018"

[dependencies]
omnistreams = { path = "../omnistreams/omnistreams-rs" }
futures = "0.1"
warp = "0.1"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
hyper = "0.12"
